Refactor KadaiTaskStarter.java and KadaiTaskTerminator.java and split them into multiple classes